--- a/client/typescript/gamium-client-common/package.json
+++ b/client/typescript/gamium-client-common/package.json
@@ -22,12 +22,12 @@
     "axios": "1.3.5",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "flatbuffers": "22.10.26",
     "gl-matrix": "3.4.3",
-    "reflect-metadata": "0.1.13",
-    "flatbuffers": "22.10.26"
+    "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
-    "@dogu/docs-gen": "file:../../../utils/typescript/docs-gen",
+    "@dogu/docs-gen": "link:../../../utils/typescript/docs-gen",
     "@types/assert": "1.5.6",
     "@types/node": "18.15.11",
     "@types/shelljs": "0.8.11",
