--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -1,15 +1,20 @@
 name: ci-docs
 
 on:
-  workflow_dispatch:
+  push:
+    paths:
+      - docs/**
 
   push:
     branches: ['main']
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     name: Build
+    runs-on: ubuntu-latest
+    env:
+          working-directory: ./docs
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -19,19 +24,4 @@ jobs:
       - name: Build
         run: |
           yarn install && yarn build
-
-  on-failure:
-    runs-on: ubuntu-latest
-    needs: build
-    if: failure()
-
-    steps:
-      - name: Send Slack
-        uses: dogu-team/slack@v1.0
-        with:
-          template: 'CI'
-          slack-channel-id: 'C03PL9TC44Q'
-          result-status: ${{ needs.build.result }}
-          ignore-notify: ${{ needs.build.result == 'success' }}
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        working-directory: ${{ env.working-directory }}
