--- a/docs/package.json
+++ b/docs/package.json
@@ -23,14 +23,17 @@
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "6.10.0"
   },
   "devDependencies": {
     "@docusaurus/eslint-plugin": "^2.2.0",
     "@docusaurus/module-type-aliases": "^2.2.0",
     "@docusaurus/types": "^2.2.0",
     "@tsconfig/docusaurus": "^1.0.6",
+    "@types/node": "18.15.11",
     "@types/react": "^17.0.2",
+    "@types/react-router-dom": "^5.3.3",
     "@yarnpkg/sdks": "^3.0.0-rc.34",
     "cross-env": "^7.0.3",
     "typescript": "^4.7.4"
