--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
       "docs"
     ]
   },
-  "packageManager": "yarn@3.3.1"
+  "packageManager": "yarn@3.3.1",
+  "devDependencies": {
+    "@types/node": "20.1.4",
+    "prettier": "2.8.8",
+    "typescript": "4.7.4"
+  }
 }
