--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,13 +1,13 @@
 nodeLinker: pnp
 
 packageExtensions:
-  chalk@5.0.0:
+  chalk@5:
     dependencies:
-      "#ansi-styles": "npm:ansi-styles@6.1.0"
-      "#supports-color": "npm:supports-color@9.2.2"
+      '#ansi-styles': 'npm:ansi-styles@6'
+      '#supports-color': 'npm:supports-color@9'
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
+    spec: '@yarnpkg/plugin-workspace-tools'
 
 yarnPath: .yarn/releases/yarn-3.3.1.cjs
