--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["arcanis.vscode-zipfs", "esbenp.prettier-vscode", "unifiedjs.vscode-mdx"]
+  "recommendations": [
+    "arcanis.vscode-zipfs",
+    "esbenp.prettier-vscode",
+    "unifiedjs.vscode-mdx"
+  ]
 }
