--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,11 +48,23 @@
   "eslint.lintTask.options": ".ts",
   "eslint.nodePath": ".yarn/sdks",
   "eslint.packageManager": "yarn",
-  "eslint.probe": ["javascript", "javascriptreact", "typescript", "typescriptreact", "html", "vue", "markdown"],
-  "eslint.workingDirectories": ["."],
+  "eslint.probe": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "html",
+    "vue",
+    "markdown"
+  ],
+  "eslint.workingDirectories": [
+    "."
+  ],
   "git.rebaseWhenSync": true,
   "javascript.preferences.importModuleSpecifier": "relative",
-  "prettier.documentSelectors": ["*.ts, *.json"],
+  "prettier.documentSelectors": [
+    "*.ts, *.json"
+  ],
   "prettier.prettierPath": ".yarn/sdks/prettier/index.js",
   "sourcekit-lsp.trace.server": "messages",
   "typescript.inlayHints.variableTypes.enabled": true,
