✨ add protocol/unity development guide

--- a/engine/unity/package.json
+++ b/engine/unity/package.json
@@ -2,11 +2,14 @@
   "name": "com.dogu.gamium.engine.unity",
   "version": "1.0.0",
   "description": "gamium unity server package",
+  "license": "MIT",
   "author": "gamium",
+  "dependencies": {
+    "com.unity.nuget.newtonsoft-json": "3.0.1"
+  },
   "keywords": [],
   "changelogUrl": "https://github.com/dogu-team/gamium-engine-unity/blob/main/CHANGELOG.md",
   "displayName": "Dogu.Gamium.Unity.Server",
-  "license": "MIT",
   "licensesUrl": "https://github.com/dogu-team/gamium-engine-unity/blob/main/LICENSE.md",
   "unity": "2020.3",
   "unityRelease": "0b5"
