docs: python client api docs generation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,13 @@
       "module": "gamium",
       "justMyCode": true,
       "cwd": "${workspaceFolder}/client/python/gamium"
+    },
+    {
+      "name": "Python: Current File",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal"
     }
   ]
 }
