--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -18,4 +18,4 @@ body:
       placeholder: |-
         Add a temperature setting to Gamium.
     validations:
-      required: false
+      required: true
