--- a/.github/workflows/ci-gamium.yml
+++ b/.github/workflows/ci-gamium.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Run ${{ matrix.project }} typescript
         if: ${{ matrix.do_test }}
         run: |
-          yarn && ${{ github.workspace }}/gamium-unity-samples/${{ matrix.project }}/build/${{ matrix.unity_buildtarget }}/${{ steps.project-lower.outputs.lowercase }}${{ matrix.build_ext }} && yarn run:${{ matrix.project }}
+          ${{ github.workspace }}/gamium-unity-samples/${{ matrix.project }}/build/${{ matrix.unity_buildtarget }}/${{ steps.project-lower.outputs.lowercase }}${{ matrix.build_ext }} && yarn run:${{ matrix.project }}
         env:
           YARN_ENABLE_IMMUTABLE_INSTALLS: false
         working-directory: ./gamium-unity-samples/client/typescript
